# Rust_Compressor

./: .gitignore  README.md  REAMDE.md
.github/workflows/: node.js.yml  rust.yml
ff-rewrite-typescript-id-allocator/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
ff-rewrite-typescript-id-allocator/src/: IdCompressor.ts  appendOnlySortedMap.ts  finalSpace.ts  sessionSpaceNormalizer.ts  sessions.ts  utilities.ts
id-compressor/: Cargo.toml
id-compressor/src/: compressor.rs  id_types.rs  lib.rs  tables.rs
id-compressor/src/compressor/: persistence.rs  (+3 more)
rust-wasm-id-allocator/: Cargo.toml
rust-wasm-id-allocator/distributed-id-allocator/: Cargo.toml
rust-wasm-id-allocator/distributed-id-allocator/src/: compressor.rs  lib.rs
rust-wasm-id-allocator/distributed-id-allocator/src/compressor/: persistence.rs  persistence_utils.rs  tables.rs
rust-wasm-id-allocator/distributed-id-allocator/src/compressor/tables/: final_space.rs  id_cluster.rs  session_space.rs  session_space_normalizer.rs  uuid_space.rs
rust-wasm-id-allocator/distributed-id-allocator/src/compressor/tables/session_space_normalizer/: persistence.rs
rust-wasm-id-allocator/distributed-id-allocator/src/id_types/: compressed_id.rs  final_id.rs  local_id.rs  op_space_id.rs  session_id.rs  session_space_id.rs  stable_id.rs
rust-wasm-id-allocator/distributed-id-allocator/tests/: compressor_unit_tests.rs
rust-wasm-id-allocator/distributed-id-allocator/tests/compressor_test_utils/: mod.rs
rust-wasm-id-allocator/id-types/: Cargo.toml
rust-wasm-id-allocator/id-types/src/: errors.rs  final_id.rs  lib.rs  local_id.rs  op_space_id.rs  session_id.rs  session_space_id.rs  stable_id.rs
rust-wasm-id-allocator/wasm-id-allocator/: Cargo.toml
rust-wasm-id-allocator/wasm-id-allocator/src/: lib.rs
typescript-id-allocator/: IdCompressor.ts  id-compressor.js  id-compressor.ts  package-lock.json  package.json  tsconfig-release.json  tsconfig.eslint.json  tsconfig.json  wasm-size.js
typescript-id-allocator/src/: IdCompressor.ts  utilities.ts
typescript-id-allocator/test/: idCompressor.memory.spec.ts  idCompressor.test.ts  test.ts
typescript-id-allocator/types/: idCompressor.ts  index.ts
typescript-id-allocator/util/: idRange.ts  index.ts  utilities.ts
(+42 files in other folders)
