[package]
name = "distributed-id-allocator"
version = "0.1.0"
edition = "2021"

[features]
default = ["uuid-generation"]
uuid-generation = ["id-types/uuid-generation"]

[dependencies.serde]
version = "1.0.152"
default-features = false

[dependencies.postcard]
version = "1.0.0"
features = ["alloc"]

[dev-dependencies.uuid]
version = "1.2.2"
features = [
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js"
]

[dependencies]
id-types = { path = "../../rust-wasm-id-allocator/id-types", version = "0.1", default-features = false }