[package]
name = "id-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["uuid-generation"]
uuid-generation = ["uuid/v4", "uuid/fast-rng"]

[dependencies.serde]
version = "1.0.152"
default-features = false
features = ["derive"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js"
]

[dependencies.thiserror]
version = "1.0"

